--- a/frontend/scss/pages/Navbar.scss
+++ b/frontend/scss/pages/Navbar.scss
@@ -30,7 +30,7 @@
 
   &-menu {
     width: 100%;
-    height: calc(100vh - 65px);
+    height: calc(100vh - 66px);
     position: absolute;
     z-index: 2;
     font-size: 1.2em;
