--- a/frontend/scss/pages/NewProduct.scss
+++ b/frontend/scss/pages/NewProduct.scss
@@ -7,6 +7,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 
     & h2 {
       margin: 10px 0;
